compiler_errors/examples/keyword_typo_3.f90
program hello
    prnit *, "Hello, World!"
end program hello
